# Aurora-emulator-smpl

./: mali_descriptor.json  panfrost.json
.github/workflows/: build-apk.yml
android/app/src/main/cpp/aurora_cmake/: CMakeLists.txt
android/app/src/main/java/app/gamenative/: PluviaApp.kt
android/app/src/main/java/app/gamenative/ui/screen/xserver/: XServerScreen.kt
android/app/src/main/java/app/gamenative/utils/: ContainerUtils.kt
android/app/src/main/java/com/winlator/xenvironment/: ImageFsInstaller.java
aurora/: .gitignore  LICENSE  PROJECT_STATE.md  README.md  worklog.md
aurora/.github/workflows/: build-apk.yml
aurora/android/app/: build.gradle.kts
aurora/android/app/src/main/cpp/: CMakeLists.txt
aurora/android/app/src/main/cpp/aurora_cmake/: CMakeLists.txt
aurora/android/app/src/main/cpp/aurora_mali_sanitizer/: aurora_mali_sanitizer.cpp  aurora_mali_sanitizer.json
aurora/android/app/src/main/cpp/aurora_mesh/: aurora_mesh_jni.cpp
aurora/android/app/src/main/cpp/aurora_texture/: aurora_texture_jni.cpp
aurora/android/app/src/main/cpp/evshim/: evshim.c
aurora/android/app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
aurora/android/app/src/main/java/app/gamenative/enums/: Marker.kt
aurora/android/app/src/main/java/app/gamenative/ui/component/dialog/: ContainerConfigDialog.kt
aurora/android/app/src/main/java/app/gamenative/ui/screen/xserver/: XServerScreen.kt
aurora/android/app/src/main/java/app/gamenative/utils/: ContainerUtils.kt  PreInstallSteps.kt
aurora/android/app/src/main/java/app/gamenative/utils/preInstallSteps/: DirectXStep.kt  DotNetStep.kt
aurora/android/app/src/main/java/com/winlator/contents/: ContentProfile.java  ContentsManager.java
aurora/android/app/src/main/java/com/winlator/core/: AuroraMeshHelper.java  AuroraPrefetchHelper.java  AuroraSanitizerHelper.java  AuroraShaderCacheHelper.java  AuroraTextureHelper.java  DefaultVersion.java
aurora/android/app/src/main/java/com/winlator/core/aurora/: MarkovModel.kt
aurora/android/app/src/main/java/com/winlator/inputcontrols/: ExternalController.java
aurora/android/app/src/main/java/com/winlator/winhandler/: WinHandler.java
aurora/android/app/src/main/java/com/winlator/xenvironment/: ImageFsInstaller.java
aurora/android/app/src/main/java/com/winlator/xenvironment/components/: GlibcProgramLauncherComponent.java
aurora/android/app/src/main/res/values/: aurora_strings.xml  strings.xml
aurora/android/gradle/: libs.versions.toml
aurora/android/ubuntufs/: build.gradle.kts
aurora/archive/poc_engines/src/: integration_poc.py
aurora/archive/poc_engines/src/audio_engine/: alsa_client.py  audio_options.py  audio_poc.py  auto_selector.py  pulseaudio_component.py
aurora/archive/poc_engines/src/auto_installer/: auto_installer.py  auto_installer_poc.py  exe_detector.py  marker_utils.py  pe_parser.py  pre_install_step.py
aurora/archive/poc_engines/src/auto_installer/steps/: directx_step.py  physx_step.py  vcredist_step.py
aurora/archive/poc_engines/src/box64_integration/: box64_manager.py
aurora/archive/poc_engines/src/dxvk_integration/: dxvk_manager.py
aurora/archive/poc_engines/src/loader_engine/: predictive_prefetcher.py
aurora/archive/poc_engines/src/mali_sanitizer/: mali_sanitizer_poc.py  rule_database.py  sanitizer.py
aurora/archive/poc_engines/src/mesh_engine/: aot_mesh_simplifier.py
aurora/archive/poc_engines/src/orchestrator/: aurora_container.py  aurora_env_vars.py  aurora_environment.py  aurora_gpu.py  aurora_imagefs.py  orchestrator_poc.py
aurora/archive/poc_engines/src/orchestrator/components/: audio.py  base.py  box64_launcher.py  loader_engine.py  mali_sanitizer.py  mesh_engine.py  shader_engine.py  texture_engine.py
aurora/archive/poc_engines/src/shader_engine/: shader_cache.py
aurora/archive/poc_engines/src/texture_engine/: aot_texture_transcoder.py
aurora/archive/poc_engines/src/wine_integration/: wine_manager.py
aurora/docs/: AAA_FEASIBILITY.md  ARCHITECTURE_DECISIONS.md  COMPETITOR_COMPARISON.md  ENV_VAR_MATRIX.md  INTEGRATION_PLAN.md  REFERENCE_ARCHITECTURE.md  RESEARCH_SYNTHESIS.md
aurora/scripts/: setup_third_party.sh
aurora/src/texture_engine/: aot_texture_transcoder.py
research/: adreno_mali.json  box64.json  cassia.json  dxil.json  dxvk.json  dxvk_native.json  exagear.json  gamehub.json  immortalis.json  joiplay.json  mali_failures.json  mali_pipeline.json  mali_subgroup.json  mali_vulkan.json  mobox.json  mobox_page.json  mongsil.json  nine.json  search_01_winlator.json  search_02_mali.json  search_03_mobox.json  search_04_box64.json  search_05_fex.json  search_06_turnip.json  search_07_dxvk.json  search_08_panfrost.json  search_09_rosetta.json  search_10_astc.json  search_11_basis.json  search_12_mesh.json  search_13_prefetch.json  search_14_fsr.json  search_15_ppsspp.json  search_16_tso.json  search_17_shadercache.json  search_18_retroarch.json  search_19_dynamo.json  search_20_mali_vulkan.json  shader_stutter.json  togl.json  (+8 more)
upload/: GLM_5.2_Aurora_Master_Prompt.md
